     74- allow polrecip(scalar x) -> x
     75- extend factormod(f, D) for general finite fields: D = p prime
         [over Fp], D = [T,p] (over Fp[x]/(T)), or omited [over field of
         definition of f]. Same for polrootsmod.
     76- factorff and polrootsff are now obsolete. Use factormod/polrootsmod
     77- Ser(s, 'x, d) now always return a series with d significant terms.
         It used to return a t_SER s in 'x verbatim and to use all given
         coefficients for a t_VEC/t_COL. Only if d is explicitly given,
         no change for Ser(s,'x)
     78- elllocalred, ellap, ellcard, ellissupersingular, ellgroup(,0):
         allow models which are not p-integral
     79- ellgroup: allow E over number field
     80- factorback([;]) is now invalid [ [;] is not the empty factorization,
         factor(1) = matrix(0,2) is ]
     81- cmpiu / cmpiu, equaliu / equalui : no longer assume that t_INT argument
         is non-negative
     82- rename diviu_rem -> absdiviu_rem, udiviu_rem -> uabsdiviu_rem,
         udivui_rem -> uabsdivui_rem
     83- allow E.omega, E.eta, E.area for E over number field
     84- ellpointtoz for E over number field
AP   85- algnorm, algtrace and algcharpoly now have an optional flag to get the
         absolute version over an alginit algebra
AP   86- renamed algsplittingmatrix -> algtomatrix
AP   87- algleftmultable now always returns the multiplication table on the
         integral basis
AP   88- merged algdecomposition + algsimpledec -> algsimpledec
AP   89- algpoleval: new syntax for matrix argument algpoleval(al,pol,[x,mx])

  Removed
      1- file 'MACHINES' (no longer maintained)
      2- useless argument nf in ZC_nfval, ZC_nfvalrem, pr_equal, ZC_prdvd
      3- useless flag argument in polrootsmod
      4- [libpari] useless function Flx_roots_naive; rootmod and rootmod2
         are now an alias for polrootsmod (both have been deprecated for years)
         rootmod0 is just as obsolete.