@@ -21,12 +21,12 @@
 4656024843050255154457301289878660746147
 1.51863300057685354046038521578944403815619503298984870317161018509598214549
 5561104880431870004657718333754298413639
-[2, -53]
-[2, -53]
-[4, -55]
-[8, -54]
-[1, -55]
-[2, -56]
-[72, -62]
-[1/5, -11]
-Total time spent: 1296
+2
+2
+4
+8
+1
+2
+72
+1/5
+Total time spent: 1532
