@@ -580,6 +580,8 @@ AP   87- algleftmultable now always returns the multiplication table on the
          integral basis
 AP   88- merged algdecomposition + algsimpledec -> algsimpledec
 AP   89- algpoleval: new syntax for matrix argument algpoleval(al,pol,[x,mx])
+BA   90- ellmoddegree: return only the modular degree, do not depend on current
+         precision.
 
   Removed
       1- file 'MACHINES' (no longer maintained)
